otel collector contrib instead of core, corrected readme for unix endlines
Signed-off-by: miun <175016327+miunibm@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
     "Glassfish",
     "healthcheck",
     "Instana",
+    "isready",
     "javaagent",
     "JAXB",
     "jdbc",
@@ -39,6 +40,7 @@
     "nologin",
     "onpremise",
     "otelc",
+    "otelcol",
     "pgsql",
     "procps",
     "pwsh",
