Must initialize traces file manually. Can't find better solution for now.
Signed-off-by: miun <175016327+miunibm@users.noreply.github.com>

--- a/10.Labs/01.E2EM_Instana/docker-compose.yml
+++ b/10.Labs/01.E2EM_Instana/docker-compose.yml
@@ -331,6 +331,6 @@ services:
     hostname: lab01-otelc
     volumes:
       - ./config/otelc/config.yaml:/etc/otelcol-contrib/config.yaml
-      - ./local/traces.json:/tmp/traces.json:rw
+      - ./local/otel/traces.json:/tmp/traces.json
     networks:
       - n1
