moved the instana conf file
Signed-off-by: mikelo <michele.orlandi@gmail.com>

--- a/10.Labs/01.E2EM_Instana/docker-compose.yml
+++ b/10.Labs/01.E2EM_Instana/docker-compose.yml
@@ -329,7 +329,7 @@ services:
     pid: host
     volumes:
       - /run/user/1000/:/var/run
-      - ./configuration-custom.yaml:/opt/instana/agent/etc/instana/configuration-custom.yaml
+      - ./config/instana-agent/configuration-custom.yaml:/opt/instana/agent/etc/instana/configuration-custom.yaml
       - /dev:/dev:ro
       - /sys:/sys:ro
       - /var/log:/var/log:ro
