/var/run commented
Signed-off-by: mikelo <michele.orlandi@gmail.com>

--- a/10.Labs/01.E2EM_Instana/docker-compose.yml
+++ b/10.Labs/01.E2EM_Instana/docker-compose.yml
@@ -328,7 +328,7 @@ services:
       - n1
     pid: host
     volumes:
-      - /run/user/1000/:/var/run
+      # - /run/user/1000/:/var/run
       - ./config/instana-agent/configuration-custom.yaml:/opt/instana/agent/etc/instana/configuration-custom.yaml
       - /dev:/dev:ro
       - /sys:/sys:ro
