Recovered an incomplete commit on the ubi installer playground
Signed-off-by: miun <175016327+miunibm@users.noreply.github.com>

--- a/09.utils/install-playground-ubi/EXAMPLE.env
+++ b/09.utils/install-playground-ubi/EXAMPLE.env
@@ -4,9 +4,10 @@
 
 ## Must tell where are the installation assets
 
-H_WMUI_INSTALLER_BIN=../../local/artifacts/installer.bin
-H_WMUI_SUM_BOOTSTRAP_BIN=../../local/artifacts/upd-mgr-bootstrap.bin
-H_LICENSES_FOLDER=../../local/licenses/folder
+H_ARTIFACTS_FOLDER=../../local/artifacts/
+H_WMUI_INSTALLER_BIN=${H_ARTIFACTS_FOLDER}/default-installer.bin
+H_WMUI_SUM_BOOTSTRAP_BIN=${H_ARTIFACTS_FOLDER}/default-upd-mgr-bootstrap.bin
+H_LICENSES_FOLDER=../../local/licenses
 
 H_OUTPUT_FOLDER=./local
 H_WMUI_HOME=../..
@@ -16,3 +17,14 @@ WMUI_INSTALL_HOME=/app/webmethods/version/products
 WMUI_INSTALL_INSTALL_DIR=/app/webmethods/version/products
 WMUI_UPD_MGR_HOME=/app/upd-mgr-v11
 WMUI_USER_HOME=/app
+WMUI_HOME=/mnt/WMUI_HOME
+
+## Guest related variables
+G_ARTIFACT_MOUNTING_POINT=/mnt/artifacts
+G_SCRIPTS_MOUNTING_POINT=/mnt/scripts
+G_LICENSES_MOUNTING_POINT=/mnt/licenses
+G_OUTPUT_MOUNTING_POINT=/mnt/output
+
+WMUI_INSTALL_INSTALLER_ARTIFACT=${G_ARTIFACT_MOUNTING_POINT}/default-installer.bin
+WMUI_INSTALL_INSTALLER_BIN=/tmp/installer.bin
+WMUI_PATCH_UPD_MGR_BOOTSTRAP_BIN=/tmp/upd-mgr-bootstrap.bin
