Uniformizing to .local folders. Might break some tests on existing clones.
Signed-off-by: miunibm <175016327+miunibm@users.noreply.github.com>

--- a/09.utils/install-playground-ubi/EXAMPLE.env
+++ b/09.utils/install-playground-ubi/EXAMPLE.env
@@ -4,12 +4,12 @@
 
 ## Must tell where are the installation assets
 
-H_ARTIFACTS_FOLDER=../../local/artifacts/
+H_ARTIFACTS_FOLDER=../../.local/artifacts/
 H_WMUI_INSTALLER_BIN=${H_ARTIFACTS_FOLDER}/default-installer.bin
 H_WMUI_SUM_BOOTSTRAP_BIN=${H_ARTIFACTS_FOLDER}/default-upd-mgr-bootstrap.bin
-H_LICENSES_FOLDER=../../local/licenses
+H_LICENSES_FOLDER=../../.local/licenses
 
-H_OUTPUT_FOLDER=./local
+H_OUTPUT_FOLDER=./.local
 H_WMUI_HOME=../..
 
 WMUI_AUDIT_HOME=/app/webmethods/audit
