--- a/03.test/MSR/1101/selection-20250924/wmui-msr-1101-sel-250924-test-01/EXAMPLE.env
+++ b/03.test/MSR/1101/selection-20250924/wmui-msr-1101-sel-250924-test-01/EXAMPLE.env
@@ -4,13 +4,13 @@
 
 H_WMUI_HOME=../../../../../
 
-H_WMUI_INSTALLER_BIN=${H_WMUI_HOME}/local/artifacts/default-installer.bin
-H_WMUI_UPD_MGR_BOOTSTRAP_BIN=${H_WMUI_HOME}/local/artifacts/default-upd-mgr-bootstrap.bin
-H_WMUI_PRODUCTS_IMAGE_FILE=${H_WMUI_HOME}/local/artifacts/products/APIGateway/1101/cds-e2e-postgres/products.zip
-H_WMUI_FIXES_IMAGE_FILE=${H_WMUI_HOME}/local/artifacts/fixes/APIGateway/1101/cds-e2e-postgres/25-09-23/fixes.zip 
+H_WMUI_INSTALLER_BIN=${H_WMUI_HOME}/.local/artifacts/default-installer.bin
+H_WMUI_UPD_MGR_BOOTSTRAP_BIN=${H_WMUI_HOME}/.local/artifacts/default-upd-mgr-bootstrap.bin
+H_WMUI_PRODUCTS_IMAGE_FILE=${H_WMUI_HOME}/.local/artifacts/products/APIGateway/1101/cds-e2e-postgres/products.zip
+H_WMUI_FIXES_IMAGE_FILE=${H_WMUI_HOME}/.local/artifacts/fixes/APIGateway/1101/cds-e2e-postgres/25-09-23/fixes.zip 
 
-H_WMUI_DBC_PRODUCTS_IMAGE_FILE=${H_WMUI_HOME}/local/artifacts/products/DBC/1101/full/products.zip
-H_WMUI_DBC_FIXES_IMAGE_FILE=${H_WMUI_HOME}/local/artifacts/fixes/DBC/1101/full/25-09-23/fixes.zip 
+H_WMUI_DBC_PRODUCTS_IMAGE_FILE=${H_WMUI_HOME}/.local/artifacts/products/DBC/1101/full/products.zip
+H_WMUI_DBC_FIXES_IMAGE_FILE=${H_WMUI_HOME}/.local/artifacts/fixes/DBC/1101/full/25-09-23/fixes.zip 
 
 WMUI_USER_HOME=/app
 
