--- a/03.test/framework/BuildZipImages/UbiMinimal8/EXAMPLE.env
+++ b/03.test/framework/BuildZipImages/UbiMinimal8/EXAMPLE.env
@@ -6,7 +6,7 @@ WMUI_EMPOWER_PASSWORD=
 # checkov:skip=CKV_SECRET_80: Yes, this is a local password :)
 
 TEST_Templates="MSR/1015/lean UM/1011/RealmServerNoInstance MSR/1011/AdaptersSet1"
-H_TEST_OUTPUT_FOLDER=../../../../local/artifacts
+H_TEST_OUTPUT_FOLDER=../../../../.local/artifacts
 TEST_OUTPUT_FOLDER=/mnt/output
 
 WMUI_AUDIT_BASE_DIR=/mnt/WMUI_AUDIT
