--- a/03.test/framework/assureBinaries/alpine/docker-compose.yml
+++ b/03.test/framework/assureBinaries/alpine/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     volumes:
       - ../../../../:/mnt/WMUI
       - ./scripts/:/mnt/scripts
-      - ../../../../local/artifacts/:/mnt/local/
+      - ../../../../.local/artifacts/:/mnt/local/
     environment:
       - WMUI_INSTALL_INSTALLER_BIN=/mnt/local/default-installer.bin
       - WMUI_PATCH_UPD_MGR_BOOTSTRAP_BIN=/mnt/local/default-upd-mgr-bootstrap.bin
