--- a/03.test/framework/generateInventory/alpine/docker-compose.yml
+++ b/03.test/framework/generateInventory/alpine/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     volumes:
       - ../../../../:/mnt/WMUI
       - ./scripts/:/mnt/scripts
-      - ./local/:/mnt/test/
+      - ./test/:/mnt/test/
     environment:
       - WMUI_COLORIZED_OUTPUT=1
     entrypoint: /mnt/scripts/entrypoint.sh
