--- a/03.test/APIGateway/1101/simple/wmui-agw-1101-test-02/EXAMPLE.env
+++ b/03.test/APIGateway/1101/simple/wmui-agw-1101-test-02/EXAMPLE.env
@@ -1,15 +1,15 @@
 # Must tell where are the installation assets
 # .env file is not subject to commit, keep your local information here
-H_WMUI_INSTALLER_BIN=../../../../../.local/artifacts/default-installer.bin
-H_WMUI_UPD_MGR_BOOTSTRAP_BIN=../../../../../.local/artifacts/default-upd-mgr-bootstrap.bin
-H_WMUI_PRODUCTS_IMAGE_FILE=../../../../../.local/artifacts/products/APIGateway/1101/default/products.zip
-H_WMUI_FIXES_IMAGE_FILE=../../../../../.local/artifacts/fixes/APIGateway/1101/default/25-09-22/fixes.zip 
+H_WMUI_INSTALLER_BIN=../../../../../local/artifacts/default-installer.bin
+H_WMUI_UPD_MGR_BOOTSTRAP_BIN=../../../../../local/artifacts/default-upd-mgr-bootstrap.bin
+H_WMUI_PRODUCTS_IMAGE_FILE=../../../../../local/artifacts/products/APIGateway/1101/default/products.zip
+H_WMUI_FIXES_IMAGE_FILE=../../../../../local/artifacts/fixes/APIGateway/1101/default/25-09-22/fixes.zip 
 
 H_WMUI_HOME=../../../../..
 WMUI_USER_HOME=/app
 
 # port prefix helps with parallelizing docker-compose projects
-H_WMUI_PORT_PREFIX=441
+H_WMUI_PORT_PREFIX=442
 
 #### WMUI Related, change only for advance use
 WMUI_DEBUG_ON=1
@@ -33,4 +33,10 @@ WMUI_INSTALL_INSTALLER_BIN=${WMUI_WORK_DIR}/default-installer.bin
 WMUI_INSTALL_IMAGE_FILE=/mnt/products.zip
 
 ######### WMUI_TEST_* Section - variables established for this test
+WMUI_TEST_LOCAL_SCRIPTS_DIR=/mnt/scripts/local
+
+CORE_ELK_VERSION=8.19.10
+PROVIDED_ELASTIC_PASSWORD=flhfegfliesfelfjiu
+PROVIDED_ELASTIC_USERNAME=notelastic
+
 WMUI_TEST_LOCAL_SCRIPTS_DIR=/mnt/scripts/local
