refined zip images generation with multiple options
Signed-off-by: miunibm <175016327+miunibm@users.noreply.github.com>

--- a/03-test/01-framework/03-build-zip-images-ubi/EXAMPLE.env
+++ b/03-test/01-framework/03-build-zip-images-ubi/EXAMPLE.env
@@ -8,11 +8,10 @@ WMUI_DOWNLOAD_PASSWORD=
 # Guideline: keep this out of the repo, to avoid long pre-commit scans
 H_TEST_OUTPUT_FOLDER=c:\path\to\artifacts-dir
 
-# WMUI_TEST_Templates="MSR/1101/simple APIGateway/1101/cds-e2e-oracle MSR/1101/selection-20250924"
-WMUI_TEST_USE_LATEST_PRODUCTS_LIST=true
-
-# May try different values
-PU_DEBUG_MODE=true
+# Take these from upper environment, see the .bat option combinations files
+# WMUI_TEST_Templates="dbc/1101/full msr/1101/simple api-gateway/1101/cds-e2e-oracle msr/1101/selection-20250924"
+# WMUI_TEST_Templates="dbc/1101/full"
+# WMUI_TEST_USE_LATEST_PRODUCTS_LIST=true
 
 # Constants from image, adapt if using a different image
 
