--- a/03-test/02-templates/test-401-dbc-1101-full/docker-compose.yml
+++ b/03-test/02-templates/test-401-dbc-1101-full/docker-compose.yml
@@ -43,7 +43,7 @@ services:
         condition: service_healthy
   dbc:
     image: vm-emu-min-local-wmui-u:ubi9
-    container_name: dbc-1101-esb-01-test-1
+    container_name: test-401-dbc
     hostname: ${WMUI_WMSCRIPT_HostName}
     volumes:
       - audit:/var/webmethods/audit
