Ported the installer playground
Signed-off-by: miunibm <175016327+miunibm@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
     "healthcheck",
     "Instana",
     "isready",
+    "iwcd",
     "javaagent",
     "JAXB",
     "jdbc",
@@ -52,6 +53,7 @@
     "spro",
     "stty",
     "ulimits",
+    "umgr",
     "urldecode",
     "urlencode",
     "urlencodepipe",
